esp_sint.output
State 62 conflicts: 8 shift/reduce
State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: CABECERA_PROGRAMA bloque

    2 bloque: LLAVE_IZQ Declar_de_variables_locales Declar_de_subprogs Sentencias LLAVE_DER

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    4                   | %empty

    5 Declar_subprog: Cabecera_subprog bloque

    6 Declar_de_variables_locales: tipo Variables_locales PYC

    7 Variables_locales: IDENTIFICADOR
    8                  | Variables_locales COMA IDENTIFICADOR

    9 tipo: TIPO_PRIM
   10     | TIPO_LISTA

   11 Cabecera_subprog: tipo IDENTIFICADOR PAR_IZQ lista_arg PAR_DER

   12 lista_arg: argumentos
   13          | %empty

   14 argumentos: tipo IDENTIFICADOR
   15           | argumentos COMA tipo IDENTIFICADOR

   16 Sentencias: Sentencias Sentencia
   17           | Sentencia

   18 Sentencia: bloque
   19          | sentencia_asignacion
   20          | sentencia_if
   21          | sentencia_while
   22          | sentencia_entrada
   23          | sentencia_salida
   24          | sentencia_return
   25          | sentencia_repeat

   26 sentencia_entrada: NOMB_ENTRADA lista_variables PYC

   27 sentencia_salida: NOMB_SALIDA lista_expresiones_o_cadena PYC

   28 expresion: PAR_IZQ expresion PAR_DER
   29          | expresion OP_UN_DELANTE
   30          | OP_UN_BIN expresion
   31          | expresion OP_UN_BIN expresion
   32          | expresion OP_MULTDIV expresion
   33          | expresion OP_BINARIO expresion
   34          | EXPR_LISTA_IZQ expresion
   35          | expresion EXPR_LISTA_DER
   36          | expresion OP_BINARIO_LISTAS expresion
   37          | expresion OP_BIN_TERN_SEG expresion
   38          | expresion OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion
   39          | IDENTIFICADOR
   40          | CONSTANTE
   41          | lista
   42          | error

   43 sentencia_asignacion: IDENTIFICADOR ASIGN expresion PYC

   44 sentencia_if: ID_IF PAR_IZQ expresion PAR_DER Sentencia
   45             | ID_IF PAR_IZQ expresion PAR_DER Sentencia ID_ELSE Sentencia

   46 sentencia_while: ID_WHILE PAR_IZQ expresion PAR_DER Sentencia

   47 sentencia_repeat: ID_REPEAT Sentencia ID_UNTIL PAR_IZQ expresion PAR_DER

   48 sentencia_return: ID_RETURN expresion PYC

   49 lista_variables: lista_variables COMA IDENTIFICADOR
   50                | lista_variables COMA CONSTANTE
   51                | IDENTIFICADOR
   52                | CONSTANTE

   53 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion
   54                           | lista_expresiones_o_cadena COMA CADENA
   55                           | expresion
   56                           | CADENA

   57 lista: CORCH_IZQ lista_variables CORCH_DER


Terminals, with rules where they appear

$end (0) 0
error (256) 42
CABECERA_PROGRAMA (258) 1
TIPO_PRIM (259) 9
TIPO_LISTA (260) 10
ID_IF (261) 44 45
ID_ELSE (262) 45
ID_WHILE (263) 46
ID_REPEAT (264) 47
ID_UNTIL (265) 47
ID_RETURN (266) 48
NOMB_ENTRADA (267) 26
NOMB_SALIDA (268) 27
EXPR_LISTA_IZQ (269) 34
EXPR_LISTA_DER (270) 35
OP_UN_DELANTE (271) 29
OP_BIN_TERN_PRIM (272) 38
OP_BIN_TERN_SEG (273) 37
OP_BINARIO (274) 33
OP_UN_BIN (275) 30 31
IDENTIFICADOR (276) 7 8 11 14 15 39 43 49 51
CADENA (277) 54 56
CONSTANTE (278) 40 50 52
PAR_IZQ (279) 11 28 44 45 46 47
PAR_DER (280) 11 28 44 45 46 47
CORCH_IZQ (281) 57
CORCH_DER (282) 57
LLAVE_IZQ (283) 2
LLAVE_DER (284) 2
COMA (285) 8 15 49 50 53 54
PYC (286) 6 26 27 43 48
ASIGN (287) 43
OP_MULTDIV (288) 32
OP_BINARIO_LISTAS (289) 36
OP_TER_LIST (290) 38


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
programa (37)
    on left: 1, on right: 0
bloque (38)
    on left: 2, on right: 1 5 18
Declar_de_subprogs (39)
    on left: 3 4, on right: 2 3
Declar_subprog (40)
    on left: 5, on right: 3
Declar_de_variables_locales (41)
    on left: 6, on right: 2
Variables_locales (42)
    on left: 7 8, on right: 6 8
tipo (43)
    on left: 9 10, on right: 6 11 14 15
Cabecera_subprog (44)
    on left: 11, on right: 5
lista_arg (45)
    on left: 12 13, on right: 11
argumentos (46)
    on left: 14 15, on right: 12 15
Sentencias (47)
    on left: 16 17, on right: 2 16
Sentencia (48)
    on left: 18 19 20 21 22 23 24 25, on right: 16 17 44 45 46 47
sentencia_entrada (49)
    on left: 26, on right: 22
sentencia_salida (50)
    on left: 27, on right: 23
expresion (51)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right:
    28 29 30 31 32 33 34 35 36 37 38 43 44 45 46 47 48 53 55
sentencia_asignacion (52)
    on left: 43, on right: 19
sentencia_if (53)
    on left: 44 45, on right: 20
sentencia_while (54)
    on left: 46, on right: 21
sentencia_repeat (55)
    on left: 47, on right: 25
sentencia_return (56)
    on left: 48, on right: 24
lista_variables (57)
    on left: 49 50 51 52, on right: 26 49 50 57
lista_expresiones_o_cadena (58)
    on left: 53 54 55 56, on right: 27 53 54
lista (59)
    on left: 57, on right: 41


State 0

    0 $accept: . programa $end

    CABECERA_PROGRAMA  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: CABECERA_PROGRAMA . bloque

    LLAVE_IZQ  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 bloque: LLAVE_IZQ . Declar_de_variables_locales Declar_de_subprogs Sentencias LLAVE_DER

    TIPO_PRIM   shift, and go to state 6
    TIPO_LISTA  shift, and go to state 7

    Declar_de_variables_locales  go to state 8
    tipo                         go to state 9


State 4

    1 programa: CABECERA_PROGRAMA bloque .

    $default  reduce using rule 1 (programa)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    9 tipo: TIPO_PRIM .

    $default  reduce using rule 9 (tipo)


State 7

   10 tipo: TIPO_LISTA .

    $default  reduce using rule 10 (tipo)


State 8

    2 bloque: LLAVE_IZQ Declar_de_variables_locales . Declar_de_subprogs Sentencias LLAVE_DER

    $default  reduce using rule 4 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 10


State 9

    6 Declar_de_variables_locales: tipo . Variables_locales PYC

    IDENTIFICADOR  shift, and go to state 11

    Variables_locales  go to state 12


State 10

    2 bloque: LLAVE_IZQ Declar_de_variables_locales Declar_de_subprogs . Sentencias LLAVE_DER
    3 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    TIPO_PRIM      shift, and go to state 6
    TIPO_LISTA     shift, and go to state 7
    ID_IF          shift, and go to state 13
    ID_WHILE       shift, and go to state 14
    ID_REPEAT      shift, and go to state 15
    ID_RETURN      shift, and go to state 16
    NOMB_ENTRADA   shift, and go to state 17
    NOMB_SALIDA    shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19
    LLAVE_IZQ      shift, and go to state 3

    bloque                go to state 20
    Declar_subprog        go to state 21
    tipo                  go to state 22
    Cabecera_subprog      go to state 23
    Sentencias            go to state 24
    Sentencia             go to state 25
    sentencia_entrada     go to state 26
    sentencia_salida      go to state 27
    sentencia_asignacion  go to state 28
    sentencia_if          go to state 29
    sentencia_while       go to state 30
    sentencia_repeat      go to state 31
    sentencia_return      go to state 32


State 11

    7 Variables_locales: IDENTIFICADOR .

    $default  reduce using rule 7 (Variables_locales)


State 12

    6 Declar_de_variables_locales: tipo Variables_locales . PYC
    8 Variables_locales: Variables_locales . COMA IDENTIFICADOR

    COMA  shift, and go to state 33
    PYC   shift, and go to state 34


State 13

   44 sentencia_if: ID_IF . PAR_IZQ expresion PAR_DER Sentencia
   45             | ID_IF . PAR_IZQ expresion PAR_DER Sentencia ID_ELSE Sentencia

    PAR_IZQ  shift, and go to state 35


State 14

   46 sentencia_while: ID_WHILE . PAR_IZQ expresion PAR_DER Sentencia

    PAR_IZQ  shift, and go to state 36


State 15

   47 sentencia_repeat: ID_REPEAT . Sentencia ID_UNTIL PAR_IZQ expresion PAR_DER

    ID_IF          shift, and go to state 13
    ID_WHILE       shift, and go to state 14
    ID_REPEAT      shift, and go to state 15
    ID_RETURN      shift, and go to state 16
    NOMB_ENTRADA   shift, and go to state 17
    NOMB_SALIDA    shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19
    LLAVE_IZQ      shift, and go to state 3

    bloque                go to state 20
    Sentencia             go to state 37
    sentencia_entrada     go to state 26
    sentencia_salida      go to state 27
    sentencia_asignacion  go to state 28
    sentencia_if          go to state 29
    sentencia_while       go to state 30
    sentencia_repeat      go to state 31
    sentencia_return      go to state 32


State 16

   48 sentencia_return: ID_RETURN . expresion PYC

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion  go to state 45
    lista      go to state 46


State 17

   26 sentencia_entrada: NOMB_ENTRADA . lista_variables PYC

    IDENTIFICADOR  shift, and go to state 47
    CONSTANTE      shift, and go to state 48

    lista_variables  go to state 49


State 18

   27 sentencia_salida: NOMB_SALIDA . lista_expresiones_o_cadena PYC

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CADENA          shift, and go to state 50
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion                   go to state 51
    lista_expresiones_o_cadena  go to state 52
    lista                       go to state 46


State 19

   43 sentencia_asignacion: IDENTIFICADOR . ASIGN expresion PYC

    ASIGN  shift, and go to state 53


State 20

   18 Sentencia: bloque .

    $default  reduce using rule 18 (Sentencia)


State 21

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 3 (Declar_de_subprogs)


State 22

   11 Cabecera_subprog: tipo . IDENTIFICADOR PAR_IZQ lista_arg PAR_DER

    IDENTIFICADOR  shift, and go to state 54


State 23

    5 Declar_subprog: Cabecera_subprog . bloque

    LLAVE_IZQ  shift, and go to state 3

    bloque  go to state 55


State 24

    2 bloque: LLAVE_IZQ Declar_de_variables_locales Declar_de_subprogs Sentencias . LLAVE_DER
   16 Sentencias: Sentencias . Sentencia

    ID_IF          shift, and go to state 13
    ID_WHILE       shift, and go to state 14
    ID_REPEAT      shift, and go to state 15
    ID_RETURN      shift, and go to state 16
    NOMB_ENTRADA   shift, and go to state 17
    NOMB_SALIDA    shift, and go to state 18
    IDENTIFICADOR  shift, and go to state 19
    LLAVE_IZQ      shift, and go to state 3
    LLAVE_DER      shift, and go to state 56

    bloque                go to state 20
    Sentencia             go to state 57
    sentencia_entrada     go to state 26
    sentencia_salida      go to state 27
    sentencia_asignacion  go to state 28
    sentencia_if          go to state 29
    sentencia_while       go to state 30
    sentencia_repeat      go to state 31
    sentencia_return      go to state 32


State 25

   17 Sentencias: Sentencia .

    $default  reduce using rule 17 (Sentencias)


State 26

   22 Sentencia: sentencia_entrada .

    $default  reduce using rule 22 (Sentencia)


State 27

   23 Sentencia: sentencia_salida .

    $default  reduce using rule 23 (Sentencia)


State 28

   19 Sentencia: sentencia_asignacion .

    $default  reduce using rule 19 (Sentencia)


State 29

   20 Sentencia: sentencia_if .

    $default  reduce using rule 20 (Sentencia)


State 30

   21 Sentencia: sentencia_while .

    $default  reduce using rule 21 (Sentencia)


State 31

   25 Sentencia: sentencia_repeat .

    $default  reduce using rule 25 (Sentencia)


State 32

   24 Sentencia: sentencia_return .

    $default  reduce using rule 24 (Sentencia)


State 33

    8 Variables_locales: Variables_locales COMA . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 58


State 34

    6 Declar_de_variables_locales: tipo Variables_locales PYC .

    $default  reduce using rule 6 (Declar_de_variables_locales)


State 35

   44 sentencia_if: ID_IF PAR_IZQ . expresion PAR_DER Sentencia
   45             | ID_IF PAR_IZQ . expresion PAR_DER Sentencia ID_ELSE Sentencia

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion  go to state 59
    lista      go to state 46


State 36

   46 sentencia_while: ID_WHILE PAR_IZQ . expresion PAR_DER Sentencia

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion  go to state 60
    lista      go to state 46


State 37

   47 sentencia_repeat: ID_REPEAT Sentencia . ID_UNTIL PAR_IZQ expresion PAR_DER

    ID_UNTIL  shift, and go to state 61


State 38

   42 expresion: error .

    $default  reduce using rule 42 (expresion)


State 39

   34 expresion: EXPR_LISTA_IZQ . expresion

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion  go to state 62
    lista      go to state 46


State 40

   30 expresion: OP_UN_BIN . expresion

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion  go to state 63
    lista      go to state 46


State 41

   39 expresion: IDENTIFICADOR .

    $default  reduce using rule 39 (expresion)


State 42

   40 expresion: CONSTANTE .

    $default  reduce using rule 40 (expresion)


State 43

   28 expresion: PAR_IZQ . expresion PAR_DER

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion  go to state 64
    lista      go to state 46


State 44

   57 lista: CORCH_IZQ . lista_variables CORCH_DER

    IDENTIFICADOR  shift, and go to state 47
    CONSTANTE      shift, and go to state 48

    lista_variables  go to state 65


State 45

   29 expresion: expresion . OP_UN_DELANTE
   31          | expresion . OP_UN_BIN expresion
   32          | expresion . OP_MULTDIV expresion
   33          | expresion . OP_BINARIO expresion
   35          | expresion . EXPR_LISTA_DER
   36          | expresion . OP_BINARIO_LISTAS expresion
   37          | expresion . OP_BIN_TERN_SEG expresion
   38          | expresion . OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion
   48 sentencia_return: ID_RETURN expresion . PYC

    EXPR_LISTA_DER     shift, and go to state 66
    OP_UN_DELANTE      shift, and go to state 67
    OP_BIN_TERN_PRIM   shift, and go to state 68
    OP_BIN_TERN_SEG    shift, and go to state 69
    OP_BINARIO         shift, and go to state 70
    OP_UN_BIN          shift, and go to state 71
    PYC                shift, and go to state 72
    OP_MULTDIV         shift, and go to state 73
    OP_BINARIO_LISTAS  shift, and go to state 74


State 46

   41 expresion: lista .

    $default  reduce using rule 41 (expresion)


State 47

   51 lista_variables: IDENTIFICADOR .

    $default  reduce using rule 51 (lista_variables)


State 48

   52 lista_variables: CONSTANTE .

    $default  reduce using rule 52 (lista_variables)


State 49

   26 sentencia_entrada: NOMB_ENTRADA lista_variables . PYC
   49 lista_variables: lista_variables . COMA IDENTIFICADOR
   50                | lista_variables . COMA CONSTANTE

    COMA  shift, and go to state 75
    PYC   shift, and go to state 76


State 50

   56 lista_expresiones_o_cadena: CADENA .

    $default  reduce using rule 56 (lista_expresiones_o_cadena)


State 51

   29 expresion: expresion . OP_UN_DELANTE
   31          | expresion . OP_UN_BIN expresion
   32          | expresion . OP_MULTDIV expresion
   33          | expresion . OP_BINARIO expresion
   35          | expresion . EXPR_LISTA_DER
   36          | expresion . OP_BINARIO_LISTAS expresion
   37          | expresion . OP_BIN_TERN_SEG expresion
   38          | expresion . OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion
   55 lista_expresiones_o_cadena: expresion .

    EXPR_LISTA_DER     shift, and go to state 66
    OP_UN_DELANTE      shift, and go to state 67
    OP_BIN_TERN_PRIM   shift, and go to state 68
    OP_BIN_TERN_SEG    shift, and go to state 69
    OP_BINARIO         shift, and go to state 70
    OP_UN_BIN          shift, and go to state 71
    OP_MULTDIV         shift, and go to state 73
    OP_BINARIO_LISTAS  shift, and go to state 74

    $default  reduce using rule 55 (lista_expresiones_o_cadena)


State 52

   27 sentencia_salida: NOMB_SALIDA lista_expresiones_o_cadena . PYC
   53 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expresion
   54                           | lista_expresiones_o_cadena . COMA CADENA

    COMA  shift, and go to state 77
    PYC   shift, and go to state 78


State 53

   43 sentencia_asignacion: IDENTIFICADOR ASIGN . expresion PYC

    error           shift, and go to state 38
    EXPR_LISTA_IZQ  shift, and go to state 39
    OP_UN_BIN       shift, and go to state 40
    IDENTIFICADOR   shift, and go to state 41
    CONSTANTE       shift, and go to state 42
    PAR_IZQ         shift, and go to state 43
    CORCH_IZQ       shift, and go to state 44

    expresion  go to state 79
    lista      go to state 46


State 54

   11 Cabecera_subprog: tipo IDENTIFICADOR . PAR_IZQ lista_arg PAR_DER

    PAR_IZQ  shift, and go to state 80


State 55

    5 Declar_subprog: Cabecera_subprog bloque .

    $default  reduce using rule 5 (Declar_subprog)


State 56

    2 bloque: LLAVE_IZQ Declar_de_variables_locales Declar_de_subprogs Sentencias LLAVE_DER .

    $default  reduce using rule 2 (bloque)


State 57

   16 Sentencias: Sentencias Sentencia .

    $default  reduce using rule 16 (Sentencias)


State 58

    8 Variables_locales: Variables_locales COMA IDENTIFICADOR .

    $default  reduce using rule 8 (Variables_locales)


State 59

   29 expresion: expresion . OP_UN_DELANTE
   31          | expresion . OP_UN_BIN expresion
   32          | expresion . OP_MULTDIV expresion
   33          | expresion . OP_BINARIO expresion
   35          | expresion . EXPR_LISTA_DER
   36          | expresion . OP_BINARIO_LISTAS expresion
   37          | expresion . OP_BIN_TERN_SEG expresion
   38          | expresion . OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion
   44 sentencia_if: ID_IF PAR_IZQ expresion . PAR_DER Sentencia
   45             | ID_IF PAR_IZQ expresion . PAR_DER Sentencia ID_ELSE Sentencia

    EXPR_LISTA_DER     shift, and go to state 66
    OP_UN_DELANTE      shift, and go to state 67
    OP_BIN_TERN_PRIM   shift, and go to state 68
    OP_BIN_TERN_SEG    shift, and go to state 69
    OP_BINARIO         shift, and go to state 70
    OP_UN_BIN          shift, and go to state 71
    PAR_DER            shift, and go to state 81
    OP_MULTDIV         shift, and go to state 73
    OP_BINARIO_LISTAS  shift, and go to state 74


State 60

   29 expresion: expresion . OP_UN_DELANTE
   31          | expresion . OP_UN_BIN expresion
   32          | expresion . OP_MULTDIV expresion
   33          | expresion . OP_BINARIO expresion
   35          | expresion . EXPR_LISTA_DER
   36          | expresion . OP_BINARIO_LISTAS expresion
   37          | expresion . OP_BIN_TERN_SEG expresion
   38          | expresion . OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion
   46 sentencia_while: ID_WHILE PAR_IZQ expresion . PAR_DER Sentencia

    EXPR_LISTA_DER     shift, and go to state 66
    OP_UN_DELANTE      shift, and go to state 67
    OP_BIN_TERN_PRIM   shift, and go to state 68
    OP_BIN_TERN_SEG    shift, and go to state 69
    OP_BINARIO         shift, and go to state 70
    OP_UN_BIN          shift, and go to state 71
    PAR_DER            shift, and go to state 82
    OP_MULTDIV         shift, and go to state 73
    OP_BINARIO_LISTAS  shift, and go to state 74


State 61

   47 sentencia_repeat: ID_REPEAT Sentencia ID_UNTIL . PAR_IZQ expresion PAR_DER

    PAR_IZQ  shift, and go to state 83


State 62

   29 expresion: expresion . OP_UN_DELANTE
   31          | expresion . OP_UN_BIN expresion
   32          | expresion . OP_MULTDIV expresion
   33          | expresion . OP_BINARIO expresion
   34          | EXPR_LISTA_IZQ expresion .
   35          | expresion . EXPR_LISTA_DER
   36          | expresion . OP_BINARIO_LISTAS expresion
   37          | expresion . OP_BIN_TERN_SEG expresion
   38          | expresion . OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion

    EXPR_LISTA_DER     shift, and go to state 66
    OP_UN_DELANTE      shift, and go to state 67
    OP_BIN_TERN_PRIM   shift, and go to state 68
    OP_BIN_TERN_SEG    shift, and go to state 69
    OP_BINARIO         shift, and go to state 70
    OP_UN_BIN          shift, and go to state 71
    OP_MULTDIV         shift, and go to state 73
    OP_BINARIO_LISTAS  shift, and go to state 74

    EXPR_LISTA_DER     [reduce using rule 34 (expresion)]
    OP_UN_DELANTE      [reduce using rule 34 (expresion)]
    OP_BIN_TERN_PRIM   [reduce using rule 34 (expresion)]
    OP_BIN_TERN_SEG    [reduce using rule 34 (expresion)]
    OP_BINARIO         [reduce using rule 34 (expresion)]
    OP_UN_BIN          [reduce using rule 34 (expresion)]
    OP_MULTDIV         [reduce using rule 34 (expresion)]
    OP_BINARIO_LISTAS  [reduce using rule 34 (expresion)]
    $default           reduce using rule 34 (expresion)


State 63

   29 expresion: expresion . OP_UN_DELANTE
   30          | OP_UN_BIN expresion .
   31          | expresion . OP_UN_BIN expresion
   32          | expresion . OP_MULTDIV expresion
   33          | expresion . OP_BINARIO expresion
   35          | expresion . EXPR_LISTA_DER
   36          | expresion . OP_BINARIO_LISTAS expresion
   37          | expresion . OP_BIN_TERN_SEG expresion
   38          | expresion . OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion

    OP_UN_DELANTE  shift, and go to state 67

    $default  reduce using rule 30 (expresion)


State 64

   28 expresion: PAR_IZQ expresion . PAR_DER
   29          | expresion . OP_UN_DELANTE
   31          | expresion . OP_UN_BIN expresion
   32          | expresion . OP_MULTDIV expresion
   33          | expresion . OP_BINARIO expresion
   35          | expresion . EXPR_LISTA_DER
   36          | expresion . OP_BINARIO_LISTAS expresion
   37          | expresion . OP_BIN_TERN_SEG expresion
   38          | expresion . OP_BIN_TERN_PRIM expresion OP_TER_LIST expresion

    EXPR_LISTA_DER     shift, and go to state 66
    OP_UN_DELANTE      shift, and go to state 67
    OP_BIN_TERN_PRIM   shift, and go to state 68
    OP_BIN_TERN_SEG    shift, and go to state 69
    OP_BINARIO         shift, and go to state 70
    OP_UN_BIN          shift, and go to state 71
    PAR_DER            shift, and go to state 84
    OP_MULTDIV         shift, and go to state 73
    OP_BINARIO_LISTAS  shift, and go to state 74


State 65

   49 lista_variables: lista_variables . COMA IDENTIFICADOR
   50                | lista_variables . COMA CONSTANTE
   57 lista: CORCH_IZQ lista_variables . CORCH_DER

    CORCH_DER  shift, and go to state 85
    COMA       shift, and go to state 75


State 66

   35 expresion: expresion EXPR_LISTA_DER .

    $default  reduce using rule 35 (expresion)


State 67
